--- a/v1_chemnitz.html
+++ b/v1_chemnitz.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>v1_chemnitz_final</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>v1_chemnitz</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7516,7 +7516,12 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Exploring-Renovation-Potentials:-Data-Driven-Insights-for-Renovation-Service-Providers-in-Chemnitz">Exploring Renovation Potentials: Data-Driven Insights for Renovation Service Providers in Chemnitz<a class="anchor-link" href="#Exploring-Renovation-Potentials:-Data-Driven-Insights-for-Renovation-Service-Providers-in-Chemnitz">¶</a></h2><p>Matrnr.: 8161859, 1981524</p>
+<h2 id="Exploring-Renovation-Potentials:-Data-Driven-Insights-for-Renovation-Service-Providers-in-Chemnitz">Exploring Renovation Potentials: Data-Driven Insights for Renovation Service Providers in Chemnitz<a class="anchor-link" href="#Exploring-Renovation-Potentials:-Data-Driven-Insights-for-Renovation-Service-Providers-in-Chemnitz">¶</a></h2><p>DHBW Stuttgart, 2024
+Matrnr.: 8161859, 1981524</p>
+<ul>
+<li>Erstemal: Laufzeit Notebook ungefähr 2 Minuten 17 Sekunden</li>
+<li>Zweitemal: Laufzeit ohne Installation 1 Minute 22 Sekunden</li>
+</ul>
 </div>
 </div>
 </div>
@@ -7574,14 +7579,14 @@ Requirement already satisfied: six==1.16.0 in ./.venv/lib/python3.9/site-package
 Requirement already satisfied: threadpoolctl==3.4.0 in ./.venv/lib/python3.9/site-packages (from -r v1_requirements.txt (line 18)) (3.4.0)
 Requirement already satisfied: tzdata==2024.1 in ./.venv/lib/python3.9/site-packages (from -r v1_requirements.txt (line 19)) (2024.1)
 Requirement already satisfied: importlib-resources&gt;=3.2.0 in ./.venv/lib/python3.9/site-packages (from matplotlib==3.8.4-&gt;-r v1_requirements.txt (line 6)) (6.4.0)
+Requirement already satisfied: zipp&gt;=3.1.0 in ./.venv/lib/python3.9/site-packages (from importlib-resources&gt;=3.2.0-&gt;matplotlib==3.8.4-&gt;-r v1_requirements.txt (line 6)) (3.17.0)
 </pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>Requirement already satisfied: zipp&gt;=3.1.0 in ./.venv/lib/python3.9/site-packages (from importlib-resources&gt;=3.2.0-&gt;matplotlib==3.8.4-&gt;-r v1_requirements.txt (line 6)) (3.17.0)
-Note: you may need to restart the kernel to use updated packages.
+<pre>Note: you may need to restart the kernel to use updated packages.
 </pre>
 </div>
 </div>
@@ -9718,14 +9723,14 @@ Number of 0.0 values in 'baseRent': 0
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
-<pre>/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/815712955.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.
+<pre>/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/815712955.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.
 The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.
 
 For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.
 
 
   chemnitz_3["totalRent"].fillna(chemnitz_3["baseRent"], inplace=True)
-/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/815712955.py:25: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.
+/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/815712955.py:25: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.
 The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.
 
 For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.
@@ -10709,11 +10714,11 @@ Number of NaN values in 'thermalChar' after change: 0
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
-<pre>/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/1392155057.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1 1 1 ... 1 1 1]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
+<pre>/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/1392155057.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1 1 1 ... 1 1 1]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
   chemnitz_apartments_32.loc[:, "balcony"] = chemnitz_apartments_32["balcony"].astype(int)
-/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/1392155057.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 1 ... 0 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
+/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/1392155057.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 1 ... 0 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
   chemnitz_apartments_32.loc[:, "hasKitchen"] = chemnitz_apartments_32["hasKitchen"].astype(int)
-/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/1392155057.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 0 ... 1 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
+/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/1392155057.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 0 ... 1 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
   chemnitz_apartments_32.loc[:, "newlyConst"] = chemnitz_apartments_32["newlyConst"].astype(int)
 </pre>
 </div>
@@ -11321,11 +11326,11 @@ Selected Columns: ['balcony' 'totalRent' 'yearConstructed' 'hasKitchen' 'baseRen
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr" tabindex="0">
-<pre>/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/3699740387.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1 1 1 ... 1 1 1]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
+<pre>/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/3699740387.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1 1 1 ... 1 1 1]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
   chemnitz_apartments_4.loc[:, "balcony"] = chemnitz_apartments_4["balcony"].astype(int)
-/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/3699740387.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 1 ... 0 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
+/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/3699740387.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 1 ... 0 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
   chemnitz_apartments_4.loc[:, "hasKitchen"] = chemnitz_apartments_4["hasKitchen"].astype(int)
-/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_78433/3699740387.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 0 ... 1 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
+/var/folders/1m/v11j5lls4pz95rywbklmwxy00000gn/T/ipykernel_1387/3699740387.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0 0 0 ... 1 0 0]' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.
   chemnitz_apartments_4.loc[:, "newlyConst"] = chemnitz_apartments_4["newlyConst"].astype(int)
 </pre>
 </div>
@@ -13261,9 +13266,9 @@ Deshalb müssen Spalten kombiniert werden.</p>
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>R-squared (R2) Score: 0.12563738958797765
-Root Mean Squared Error (RMSE): 21.851685458195483
-Mean Absolute Percentage Error (MAPE): 13.41886136197876
+<pre>R-squared (R2) Score: 0.1398307168051779
+Root Mean Squared Error (RMSE): 21.673603115993785
+Mean Absolute Percentage Error (MAPE): 13.346123529900883
 </pre>
 </div>
 </div>
@@ -13306,9 +13311,9 @@ Mean Absolute Percentage Error (MAPE): 13.41886136197876
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>Cross-Validation R-squared Scores: [0.10397983 0.26849216 0.19178261 0.17748996 0.17166499]
-Mean R-squared Score: 0.1826819093546052
-Standard Deviation of R-squared Scores: 0.05251393661470371
+<pre>Cross-Validation R-squared Scores: [0.11535023 0.26514762 0.20690032 0.1847959  0.16288282]
+Mean R-squared Score: 0.18701537649367378
+Standard Deviation of R-squared Scores: 0.04944341926626916
 </pre>
 </div>
 </div>
@@ -13400,9 +13405,9 @@ Nur diesen Datensatz verwenden um das Modell zu trainieren.</p>
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>2009
-R^2 score: 0.5159867239601206
-Mean Squared Error (MSE): 334.81374966568535
-Mean Absolute Error (MAE): 10.198090569460053
+R^2 score: 0.521730953885417
+Mean Squared Error (MSE): 330.84020750178837
+Mean Absolute Error (MAE): 10.169023225138215
 </pre>
 </div>
 </div>
@@ -13446,7 +13451,7 @@ Mean Absolute Error (MAE): 10.198090569460053
 <div class="jp-OutputArea-child">
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
-<pre>Prediction: [96.81705743]
+<pre>Prediction: [95.21993016]
 Original: 0    123.0
 Name: thermalChar, dtype: float64
 </pre>
@@ -13889,50 +13894,50 @@ Auch hier hat es sich bewährt nur sichere Werte zu nehmen, Durchschnittswerte v
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>Principal Components:
 PC1:
-  totalRent: 0.48735308125782834
-  baseRent: 0.48479301731481156
-  livingSpace: 0.4595201795599083
-  noRooms: 0.4026676826110807
-  price_per_sqm: 0.1939453144766697
-  balcony: 0.18814895494559594
-  newlyConst: 0.16954173013594417
-  lastRefurbish: 0.15691711454125962
-  interiorQual: 0.10732867306286609
-  condition: 0.07917065485544506
-  yearConstructed: 0.0756079281375811
-  thermalChar: -0.05033155700755052
-  hasKitchen: -0.03875174056264057
-  petsAllowed: 0.015540099252037743
+  totalRent: 0.4873530812588506
+  baseRent: 0.4847930173145297
+  livingSpace: 0.45952017955920765
+  noRooms: 0.4026676826111292
+  price_per_sqm: 0.19394531447636143
+  balcony: 0.1881489549456032
+  newlyConst: 0.16954173013593882
+  lastRefurbish: 0.15691711454126542
+  interiorQual: 0.10732867306286277
+  condition: 0.079170654855446
+  yearConstructed: 0.07560792813757963
+  thermalChar: -0.050331557007552145
+  hasKitchen: -0.03875174056262921
+  petsAllowed: 0.01554009925203726
 PC2:
-  yearConstructed: -0.5095962415754317
-  lastRefurbish: -0.4977224654815589
-  interiorQual: -0.33472063053947254
-  thermalChar: 0.27698905474560953
-  condition: -0.24109499120508887
-  livingSpace: 0.21887408290074717
-  petsAllowed: -0.21357533276877277
-  newlyConst: -0.20252854102742737
-  noRooms: 0.19803261874830796
-  price_per_sqm: -0.16472888039850386
-  balcony: -0.14851617920260762
-  totalRent: 0.11790199372675433
-  baseRent: 0.09197978117998797
-  hasKitchen: -0.019686326230927396
+  yearConstructed: -0.5095962415754121
+  lastRefurbish: -0.4977224654816238
+  interiorQual: -0.3347206305394338
+  thermalChar: 0.27698905474562874
+  condition: -0.24109499120510006
+  livingSpace: 0.21887408290882504
+  petsAllowed: -0.21357533276876814
+  newlyConst: -0.20252854102736584
+  noRooms: 0.19803261874775313
+  price_per_sqm: -0.1647288803949482
+  balcony: -0.1485161792026909
+  totalRent: 0.11790199371493924
+  baseRent: 0.09197978118326072
+  hasKitchen: -0.019686326231059304
 PC3:
-  petsAllowed: 0.5690923368202173
-  condition: 0.5557104222010162
-  interiorQual: 0.3441620600975099
-  yearConstructed: -0.32990626924795163
-  thermalChar: 0.2652776419144903
-  newlyConst: -0.17836027261593287
-  lastRefurbish: -0.1357934637203907
-  hasKitchen: 0.11053850181843095
-  balcony: -0.04823136003944983
-  price_per_sqm: -0.044168920625387915
-  noRooms: 0.04137654333299895
-  livingSpace: 0.029938731504479333
-  baseRent: -0.017476207064210072
-  totalRent: 8.929232694109228e-05
+  petsAllowed: 0.5690923368202242
+  condition: 0.5557104222010003
+  interiorQual: 0.3441620600975682
+  yearConstructed: -0.32990626924792504
+  thermalChar: 0.265277641914518
+  newlyConst: -0.17836027261584114
+  lastRefurbish: -0.1357934637204895
+  hasKitchen: 0.11053850181823455
+  balcony: -0.04823136003957498
+  price_per_sqm: -0.044168920620080335
+  noRooms: 0.04137654333216952
+  livingSpace: 0.029938731516535363
+  baseRent: -0.01747620705933521
+  totalRent: 8.929230931868316e-05
 </pre>
 </div>
 </div>
